fix: fix contribution page spacing on mobile

--- a/web-application/client/pages/about/views/Contribute.css
+++ b/web-application/client/pages/about/views/Contribute.css
@@ -9,7 +9,7 @@
     margin: 0 auto;
 }
 .contribute-view__intro {
-    width: 700px;
+    max-width: 700px;
     margin: 0 auto;
 }
 .contribute-view h1 {
@@ -28,11 +28,12 @@
     padding: 0.25em 0;
 }
 
-
 .contribute-view .contribution-grid {
     display: grid;
     margin: 50px auto 0 auto;
-    grid-template-columns: repeat(auto-fit, 260px);
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    align-items: center;
+    justify-items: center;
 
 }
 .contribute-view .additional-contributions {
